# Dash_Prod

dash-backend/: README.md
dash-backend/src/main/java/com/dash/: UploadFilesApp.java
dash-backend/src/main/java/com/dash/controller/: FilesController.java
dash-backend/src/main/java/com/dash/exception/: FileUploadExceptionAdvice.java
dash-backend/src/main/java/com/dash/model/: FileInfo.java  ResponseMessage.java
dash-backend/src/main/java/com/dash/service/: FilesStorageService.java  FilesStorageServiceImpl.java
grpc_dash/proto/: dash_backend.proto
grpc_dash/src/: CMakeLists.txt  dbe_client.cc  dbe_server.cc  dbe_server_local.cc  derecho.cfg  env.sh  gen_grpc
react-dash/: envoy.yaml  package-lock.json  package.json
react-dash/public/: index.html  manifest.json
react-dash/src/: App.js  AppUI.js
react-dash/src/components/: BrowsingSector.jsx  DataUpload.jsx  WidgetSector.jsx
react-dash/src/services/: UploadFilesGRPC.js  UploadFilesService.js  dash_backend_grpc_web_pb.js  dash_backend_pb.js  index.js
react-dash/src/styles/: WidgetSector.css
